--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ main {
     display: flex;
     background-color: royalblue;
     border-radius: 10px;
+    padding: 3rem;
+    animation-name: glow;
+    animation-duration: 500ms;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;
+    animation-timing-function: ease-in-out;
 }
 
 .number {
@@ -43,14 +49,13 @@ main {
 }
 
 .on {
-    fill: rgb(252, 50, 50);
-    box-shadow: inset 0px 0px 15px 2px rgba(255, 0, 0, 0.65);
+    fill: rgb(224, 55, 55);
 }
 
 .segment {
     position: absolute;
     height: var(--scale);
-	fill:rgba(243, 120, 120, 0.097)
+	fill:rgba(243, 120, 120, 0.315)
 }
 
 .segment:nth-child(1) {
@@ -89,4 +94,13 @@ main {
     transform: rotate(90deg);
     top: var(--top-first-row);
     left: var(--left-first-column);
+}
+
+@keyframes glow {
+	0%{
+		box-shadow: 0px 0px 15px 10px rgb(38, 68, 158);
+	}
+	100%{
+		box-shadow: 0px 0px 15px 20px rgb(38, 68, 158);
+	}
 }
